update file MS Patient properties with adding MS config-server port

--- a/microservice-patients.properties
+++ b/microservice-patients.properties
@@ -4,3 +4,6 @@ server.port=9001
 # Configurations H2
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+
+#Defined encodage for data.sql
+spring.datasource.sql-script-encoding=UTF-8
