Add actuator to the file configuration

--- a/microservice-patients.properties
+++ b/microservice-patients.properties
@@ -7,3 +7,6 @@ spring.h2.console.enabled=true
 
 #Defined encodage for data.sql
 spring.datasource.sql-script-encoding=UTF-8
+
+#Actuator
+management.endpoints.web.exposure.include=*
